syntax = "proto3";

package spine.protodata.java;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.java";
option java_outer_classname = "TypeNameProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";

message TypeDeclaration {
    option (entity).kind = PROJECTION;

    protodata.TypeName type_name = 1;

    FilePath where_declared = 2;
}
